k8s/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui
  namespace: ui
spec:
  ports:
    - name: http-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: ui
  type: ClusterIP
status:
  loadBalancer: {}
